# zephyr-gadget-demo

./: LICENSE  README.md
ble_display_app/: CMakeLists.txt  app.overlay  prj.conf
ble_display_app/src/: main.c  ui_vars.c
ble_display_app/src/advertisement/: advertisement.c  advertisement.h
ble_display_app/src/threads/: threads.c  threads.h
ble_display_app/src/ui/: images.c  images.h  screens.c  screens.h  ui.c  vars.h
ble_display_app/src/ui/images/: ui_image_img_sensi_co2.c  ui_image_img_sensi_humi.c  ui_image_img_sensi_logo.c  ui_image_img_sensi_temp.c  ui_image_sensi_co2.c  ui_image_sensi_humi.c  ui_image_sensi_logo.c  ui_image_sensi_temp.c
ble_gadget_app/: CMakeLists.txt  app.overlay  prj.conf
ble_gadget_app/src/: main.c
